@@ -2,6 +2,7 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:zcml="http://namespaces.zope.org/zcml"
     xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:cache="http://namespaces.zope.org/cache"
     i18n_domain="plone.namedfile">
 
     <browser:page
@@ -23,5 +24,13 @@
     <include zcml:condition="installed plone.rfc822" file="marshaler.zcml" />
     <include zcml:condition="installed plone.schemaeditor" file="editor.zcml" />
     <include zcml:condition="installed plone.scale" file="scaling.zcml" />
+
+    <configure zcml:condition="installed z3c.caching">
+        <include package="z3c.caching" file="meta.zcml" />
+        <cache:ruleset
+            for=".interfaces.IStableImageScale"
+            ruleset="plone.stableResource"
+            />
+    </configure>
 
 </configure>
