@@ -4,7 +4,9 @@ Changelog
 2.0.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Cache image scales using the plone.stableResource ruleset
+  when they are accessed via UID-based URLs.
+  [davisagli]
 
 
 2.0.5 (2014-02-19)
